Application name changed from <<my_demo_flutter_project>> to <<My Demo>>

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.my_demo_flutter_project">
    <application
-        android:label="my_demo_flutter_project"
+        android:label="My Demo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
